--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/jest": "22.2.2",
     "@types/node": "^12.6.8",
     "@types/prettier": "1.10.0",
+    "@types/underscore": "^1.10.24",
     "fast-check": "^1.25.1",
     "glob": "^7.1.6",
     "jest": "^26.4.2",
