--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "fast-check": "^1.25.1",
     "glob": "^7.1.6",
+    "husky": "^5.0.9",
     "jest": "^26.4.2",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
@@ -49,5 +50,17 @@
     "ts-jest": "^26.3.0",
     "ts-node": "^8.0.2",
     "typescript": "^4.1.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "pre-push": "npm run lint"
+    }
+  },
+  "lint-staged": {
+    "*.{js,ts,tsx}": [
+      "npx eslint --fix",
+      "git add"
+    ]
   }
 }
