--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "my-library",
-  "version": "0.0.0",
+  "name": "@ordinary/utils",
+  "version": "0.0.1",
   "description": "My description",
   "main": "lib/index.js",
   "module": "es6/index.js",
   "typings": "lib/index.d.ts",
   "sideEffects": false,
-  "author": "XXXXXX",
+  "author": "Sascha Braun",
   "license": "MIT",
-  "tags": [],
-  "keywords": [],
+  "tags": ["utils", "functional", "fp", "pipable", "typescript"],
+  "keywords": ["utils", "functional", "fp", "pipable", "typescript"],
   "repository": {
     "type": "git",
-    "url": "https://github.com/xxxxx/xxxxx.git"
+    "url": "https://git.neoxia.com/typescript/ordinary-utils"
   },
   "scripts": {
     "lint": "npx eslint '{src,tests}/**/*.{ts,tsx,json,yml}'",
