feat(decoders): rename modules + add missing features + add unit tests

--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,7 @@
     "no-console": "error",
     "no-use-before-define": "off",
     "space-before-function-paren": "off",
+    "@typescript-eslint/no-empty-interface": "off",
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/ban-types": "off",
     "@typescript-eslint/no-namespace": "off",
