--- a/examples/.eslintrc
+++ b/examples/.eslintrc
@@ -3,6 +3,8 @@
     "../.eslintrc"
   ],
   "rules": {
-    "no-console": "off"
+    "no-console": "off",
+    "@typescript-eslint/no-unused-vars": "off",
+    "@typescript-eslint/no-empty-interface": "off"
   }
 }
