--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ordinary/utils",
+  "name": "@apoyo/std",
   "version": "0.0.1",
   "description": "My description",
   "main": "lib/index.js",
