--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "prebuild": "npm run clean",
     "build": "npx tsc -p ./tsconfig.build.json && npx tsc -p ./tsconfig.build-es6.json && npx ts-node scripts/build",
     "postbuild": "npx prettier --loglevel=silent --write \"./dist/**/*.ts\"",
+    "docs:generate": "npx ts-node scripts/generate-docs",
+    "docs:dev": "vuepress dev docs",
+    "docs:build": "npm run build && npm run docs:generate && vuepress build docs",
     "prepublishOnly": "npx ts-node scripts/pre-publish",
     "prerelease": "npm run build && npm run test",
     "release": "npx ts-node scripts/release",
@@ -43,6 +46,7 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "@microsoft/tsdoc": "^0.13.0",
     "@types/glob": "^7.1.3",
     "@types/jest": "22.2.2",
     "@types/node": "^12.6.8",
@@ -61,8 +65,10 @@
     "prettier": "^2.2.1",
     "rimraf": "2.6.2",
     "ts-jest": "^26.3.0",
+    "ts-morph": "^10.0.2",
     "ts-node": "^8.0.2",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.2",
+    "vuepress": "^1.8.2"
   },
   "lint-staged": {
     "*.{js,ts,tsx}": [
