--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "type": "git",
     "url": "https://github.com/neoxia/apoyo-std"
   },
+  "homepage": "https://nx-apoyo.netlify.app/",
   "scripts": {
     "lint": "npx eslint \"{src,tests}/**/*.{ts,tsx,json,yml}\"",
     "prettier": "npx prettier --list-different \"./{src,tests,examples,scripts}/**/*.ts\"",
