--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@apoyo/std",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Typescript utility library",
   "main": "lib/index.js",
   "module": "es6/index.js",
@@ -26,6 +26,7 @@
     "type": "git",
     "url": "https://github.com/neoxia/apoyo-std"
   },
+  "homepage": "https://nx-apoyo.netlify.app/",
   "scripts": {
     "lint": "npx eslint \"{src,tests}/**/*.{ts,tsx,json,yml}\"",
     "prettier": "npx prettier --list-different \"./{src,tests,examples,scripts}/**/*.ts\"",
