refacto: start monorepo setup

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 *.log
 node_modules
-/dist
+dist
 dev
 .idea
 coverage
@@ -9,4 +9,3 @@ docs-examples
 
 # Auto-generate documentation with `npm run docs:generate`
 docs/guide/namespaces
-docs/.vuepress/dist
