--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "@apoyo/std",
+  "name": "apoyo",
   "version": "0.0.4",
   "description": "Typescript utility library",
-  "main": "lib/index.js",
-  "module": "es6/index.js",
-  "typings": "lib/index.d.ts",
-  "sideEffects": false,
+  "private": "true",
+  "workspaces": [
+    "examples/*",
+    "packages/*"
+  ],
   "author": "Sascha Braun",
   "license": "MIT",
   "tags": [
@@ -28,28 +29,20 @@
   },
   "homepage": "https://nx-apoyo.netlify.app/",
   "scripts": {
-    "lint": "npx eslint \"{src,tests}/**/*.{ts,tsx,json,yml}\"",
-    "prettier": "npx prettier --list-different \"./{src,tests,examples,scripts}/**/*.ts\"",
-    "fix-prettier": "npx prettier --write \"./{src,tests,examples,scripts}/**/*.ts\"",
-    "test": "npm run lint && npm run prettier && npm run test:unit",
-    "test:unit": "npx jest --clearCache && jest --verbose --runInBand",
-    "clean": "npx rimraf ./dist",
-    "prebuild": "npm run clean",
-    "build": "npx tsc -p ./tsconfig.build.json && npx tsc -p ./tsconfig.build-es6.json && npx ts-node scripts/build",
-    "postbuild": "npx prettier --loglevel=silent --write \"./dist/**/*.ts\"",
-    "docs:generate": "npx ts-node scripts/generate-docs",
+    "lint": "npx eslint --ext js,ts,tsx .",
+    "prettier": "npx prettier --list-different \"**/*.ts\"",
+    "fix-prettier": "npx prettier --write \"**/*.ts\"",
+    "test": "npm run lint && npm run prettier && lerna run test",
+    "build": "lerna run build",
+    "docs:generate": "npx ts-node -r tsconfig-paths/register scripts/generate-docs",
     "docs:dev": "vuepress dev docs",
     "docs:build": "npm run build && npm run docs:generate && vuepress build docs",
-    "prepublishOnly": "npx ts-node scripts/pre-publish",
-    "prerelease": "npm run build && npm run test",
-    "release": "npx ts-node scripts/release",
     "postinstall": "husky install"
   },
   "dependencies": {},
   "devDependencies": {
     "@microsoft/tsdoc": "^0.13.0",
     "@types/glob": "^7.1.3",
-    "@types/jest": "22.2.2",
     "@types/node": "^12.6.8",
     "@types/prettier": "1.10.0",
     "@types/underscore": "^1.10.24",
@@ -58,16 +51,14 @@
     "eslint": "^7.19.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-prettier": "^3.3.1",
-    "fast-check": "^1.25.1",
     "glob": "^7.1.6",
     "husky": "^5.0.9",
-    "jest": "^26.4.2",
+    "lerna": "^4.0.0",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
-    "rimraf": "2.6.2",
-    "ts-jest": "^26.3.0",
     "ts-morph": "^10.0.2",
     "ts-node": "^8.0.2",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "^4.1.2",
     "vuepress": "^1.8.2"
   },
