--- a/package.json
+++ b/package.json
@@ -29,10 +29,9 @@
   },
   "homepage": "https://nx-apoyo.netlify.app/",
   "scripts": {
-    "lint": "npx eslint --ext js,ts,tsx .",
-    "prettier": "npx prettier --list-different \"**/*.ts\"",
-    "fix-prettier": "npx prettier --write \"**/*.ts\"",
-    "test": "npm run lint && npm run prettier && lerna run test",
+    "lint": "npx eslint --ext ts,tsx .",
+    "lint:fix": "npx eslint --fix --ext ts,tsx .",
+    "test": "npm run lint && lerna run test",
     "build": "lerna run build",
     "docs:generate": "npx ts-node -r tsconfig-paths/register scripts/generate-docs",
     "docs:dev": "vuepress dev docs",
