--- a/packages/std/package.json
+++ b/packages/std/package.json
@@ -31,7 +31,7 @@
     "test": "npx jest --clearCache && jest --verbose --runInBand",
     "clean": "npx rimraf ./dist",
     "prebuild": "npm run clean",
-    "build": "npx tsc -p ./tsconfig.build.json && npx tsc -p ./tsconfig.build-es6.json && npx ts-node ../../scripts/build",
+    "build": "npx tsc -p ./tsconfig.common.json && npx tsc -p ./tsconfig.es.json && npx ts-node ../../scripts/build",
     "prepublishOnly": "npx ts-node ../../scripts/pre-publish",
     "prerelease": "npm run build && npm run test",
     "release": "npx ts-node ../../scripts/release"
