--- a/tsconfig.es.json
+++ b/tsconfig.es.json
@@ -4,5 +4,9 @@
     "module": "es6",
     "target": "es6",
     "downlevelIteration": false,
+    "baseUrl": ".",
+    "paths": {
+      "@apoyo/*": ["packages/*/src"]
+    }
   }
 }
