--- a/packages/std/package.json
+++ b/packages/std/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@apoyo/std",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Typescript utility library",
   "main": "lib/index.js",
   "module": "es6/index.js",
@@ -24,9 +24,9 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/neoxia/apoyo-std"
+    "url": "https://github.com/neoxia/apoyo"
   },
-  "homepage": "https://nx-apoyo.netlify.app/",
+  "homepage": "https://github.com/neoxia/apoyo/tree/master/packages/std",
   "scripts": {
     "test": "npx jest --clearCache && jest --verbose --runInBand",
     "clean": "npx rimraf ./dist",
