--- a/packages/decoders/package.json
+++ b/packages/decoders/package.json
@@ -22,9 +22,9 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/neoxia/apoyo-std"
+    "url": "https://github.com/neoxia/apoyo"
   },
-  "homepage": "https://nx-apoyo.netlify.app/",
+  "homepage": "https://github.com/neoxia/apoyo/tree/master/packages/decoders",
   "scripts": {
     "test": "npx jest --clearCache && jest --verbose --runInBand",
     "clean": "npx rimraf ./dist",
