fix: sub-package dist folder containing files of other sub-packages

--- a/tsconfig.common.json
+++ b/tsconfig.common.json
@@ -17,7 +17,7 @@
     "stripInternal": true,
     "baseUrl": ".",
     "paths": {
-      "@apoyo/*": ["packages/*/src"]
+      "@apoyo/*": ["packages/*/dist"]
     }
   },
   "exclude": ["node_modules", "dist"]
