--- a/packages/csv/package.json
+++ b/packages/csv/package.json
@@ -22,9 +22,9 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/neoxia/apoyo-std"
+    "url": "https://github.com/neoxia/apoyo"
   },
-  "homepage": "https://nx-apoyo.netlify.app/",
+  "homepage": "https://github.com/neoxia/apoyo/tree/master/packages/csv",
   "scripts": {
     "test": "npx jest --clearCache && jest --verbose --runInBand",
     "clean": "npx rimraf ./dist",
@@ -35,7 +35,8 @@
     "release": "npx ts-node ../../scripts/release"
   },
   "dependencies": {
-    "@apoyo/std": "^0.0.4",
+    "@apoyo/decoders": "^0.0.2",
+    "@apoyo/std": "^0.0.5",
     "@types/papaparse": "^5.2.5",
     "papaparse": "^5.3.0"
   },
