--- a/packages/std/package.json
+++ b/packages/std/package.json
@@ -31,10 +31,7 @@
     "test": "npx jest --clearCache && jest --verbose --runInBand",
     "clean": "npx rimraf ./dist",
     "prebuild": "npm run clean",
-    "build": "npx tsc -p ./tsconfig.common.json && npx tsc -p ./tsconfig.es.json && npx ts-node ../../scripts/build",
-    "prepublishOnly": "npx ts-node ../../scripts/pre-publish",
-    "prerelease": "npm run build && npm run test",
-    "release": "npx ts-node ../../scripts/release"
+    "build": "npx tsc -p ./tsconfig.common.json && npx tsc -p ./tsconfig.es.json && npx ts-node ../../scripts/build"
   },
   "dependencies": {},
   "devDependencies": {
