--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@types/jest": "22.2.2",
     "@types/node": "^12.6.8",
+    "@types/react": "^16.14.6",
     "jest": "^26.4.2",
     "rimraf": "2.6.2",
     "ts-jest": "^26.3.0",
