update(react): setup tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "./tsconfig.common.json",
   "compilerOptions": {
+    "jsx": "react",
     "sourceMap": true,
     "noEmit": true,
     "baseUrl": ".",
