--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -13,21 +13,25 @@
   },
   "homepage": "https://github.com/neoxia/apoyo/tree/master/packages/react",
   "scripts": {
-    "test": "npx jest --clearCache && jest --verbose --runInBand",
+    "test": "npx jest --clearCache && jest --verbose",
     "clean": "npx rimraf ./dist",
     "prebuild": "npm run clean",
     "build": "npx tsc -p ./tsconfig.common.json && npx tsc -p ./tsconfig.es.json && npx ts-node ../../scripts/build"
   },
   "dependencies": {
-    "react": "^16.14.0"
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^11.2.7",
     "@types/jest": "22.2.2",
     "@types/node": "^12.6.8",
     "@types/react": "^16.14.6",
+    "@types/react-dom": "^16.9.13",
     "jest": "^26.4.2",
+    "react-test-renderer": "^16.14.0",
     "rimraf": "2.6.2",
-    "ts-jest": "^26.3.0",
     "ts-node": "^8.0.2",
     "typescript": "^4.1.2"
   }
