--- a/packages/react/tsconfig.common.json
+++ b/packages/react/tsconfig.common.json
@@ -1,6 +1,7 @@
 {
-  "extends": "../../tsconfig.common.json",
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "jsx": "react",
     "outDir": "./dist/lib"
   },
   "include": ["src"]
