--- a/packages/react/tsconfig.es.json
+++ b/packages/react/tsconfig.es.json
@@ -1,6 +1,7 @@
 {
   "extends": "../../tsconfig.es.json",
   "compilerOptions": {
+    "jsx": "react",
     "outDir": "./dist/es6"
   },
   "include": ["src"]
