--- a/packages/std/package.json
+++ b/packages/std/package.json
@@ -42,5 +42,8 @@
     "ts-jest": "^26.3.0",
     "ts-node": "^8.0.2",
     "typescript": "^4.1.2"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
