--- a/packages/csv/package.json
+++ b/packages/csv/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@apoyo/csv",
-  "private":"true",
+  "private": "true",
   "version": "0.0.1",
   "description": "CSV Parsing utilities",
   "main": "lib/index.js",
@@ -27,7 +27,7 @@
   },
   "homepage": "https://github.com/neoxia/apoyo/tree/master/packages/csv",
   "scripts": {
-    "test": "npx jest --clearCache && jest --verbose --runInBand",
+    "test": "jest --verbose --runInBand",
     "clean": "npx rimraf ./dist",
     "prebuild": "npm run clean",
     "build": "npx tsc -p ./tsconfig.common.json && npx tsc -p ./tsconfig.es.json && npx ts-node ../../scripts/build"
