fix(react): failing build

--- a/tsconfig.common.json
+++ b/tsconfig.common.json
@@ -16,6 +16,7 @@
     "downlevelIteration": true,
     "stripInternal": true,
     "baseUrl": ".",
+    "skipLibCheck": true,
     "paths": {
       "@apoyo/*": ["packages/*/dist"]
     }
