--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -16,14 +16,10 @@
   },
   "homepage": "https://github.com/neoxia/apoyo/tree/master/packages/react",
   "scripts": {
-    "test": "npx jest --clearCache && jest --verbose",
-    "clean": "npx rimraf ./dist",
+    "test": "jest --verbose",
+    "clean": "rimraf ./dist",
     "prebuild": "npm run clean",
-    "build": "npx tsc -p ./tsconfig.common.json && npx tsc -p ./tsconfig.es.json && npx ts-node ../../scripts/build"
-  },
-  "dependencies": {
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0"
+    "build": "tsc -p ./tsconfig.common.json && tsc -p ./tsconfig.es.json && ts-node ../../scripts/build"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.12.0",
@@ -33,9 +29,14 @@
     "@types/react": "^16.14.6",
     "@types/react-dom": "^16.9.13",
     "jest": "^26.4.2",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-test-renderer": "^16.14.0",
     "rimraf": "2.6.2",
     "ts-node": "^8.0.2",
     "typescript": "^4.1.2"
+  },
+  "peerDependencies": {
+    "react": "^16.8.0"
   }
 }
