--- a/packages/react/tsconfig.common.json
+++ b/packages/react/tsconfig.common.json
@@ -2,7 +2,8 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "jsx": "react",
-    "outDir": "./dist/lib"
+    "outDir": "./dist/lib",
+    "skipLibCheck": true
   },
   "include": ["src"]
 }
