--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "eslint": "^7.19.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "glob": "^7.1.6",
     "husky": "^5.0.9",
     "lerna": "^4.0.0",
