--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -22,12 +22,14 @@
     "build": "tsc -p ./tsconfig.common.json && tsc -p ./tsconfig.es.json && ts-node ../../scripts/build"
   },
   "dependencies": {
-    "axios": "^0.21.1"
+    "axios": "^0.21.1",
+    "lodash.isequal": "^4.5.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
-    "@types/jest": "22.2.2",
+    "@types/jest": "26.0.23",
+    "@types/lodash.isequal": "^4.5.5",
     "@types/node": "^12.6.8",
     "@types/react": "^16.14.6",
     "@types/react-dom": "^16.9.13",
