--- a/packages/react/tsconfig.common.json
+++ b/packages/react/tsconfig.common.json
@@ -2,8 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "jsx": "react",
-    "outDir": "./dist/lib",
-    "skipLibCheck": true
+    "outDir": "./dist/lib"
   },
   "include": ["src"]
 }
