--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -28,7 +28,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
-    "@types/jest": "26.0.23",
+    "@types/jest": "^26.0.23",
     "@types/lodash.isequal": "^4.5.5",
     "@types/node": "^12.6.8",
     "@types/react": "^16.14.6",
