--- a/packages/std/package.json
+++ b/packages/std/package.json
@@ -35,7 +35,7 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@types/jest": "22.2.2",
+    "@types/jest": "^26.0.23",
     "@types/node": "^12.6.8",
     "jest": "^26.4.2",
     "rimraf": "2.6.2",
