--- a/packages/csv/package.json
+++ b/packages/csv/package.json
@@ -33,12 +33,12 @@
     "build": "npx tsc -p ./tsconfig.common.json && npx tsc -p ./tsconfig.es.json && npx ts-node ../../scripts/build"
   },
   "dependencies": {
-    "@apoyo/decoders": "^0.0.7",
-    "@apoyo/std": "^0.0.8",
     "@types/papaparse": "^5.2.5",
     "papaparse": "^5.3.0"
   },
   "devDependencies": {
+    "@apoyo/decoders": "^0.0.8",
+    "@apoyo/std": "^0.0.8",
     "@types/jest": "^26.0.23",
     "@types/node": "^12.6.8",
     "jest": "^26.4.2",
@@ -46,5 +46,9 @@
     "ts-jest": "^26.3.0",
     "ts-node": "^8.0.2",
     "typescript": "^4.1.2"
+  },
+  "peerDependencies": {
+    "@apoyo/decoders": "^0.0.8",
+    "@apoyo/std": "^0.0.8"
   }
 }
