--- a/.eslintrc
+++ b/.eslintrc
@@ -21,6 +21,7 @@
     "@typescript-eslint/no-unused-vars": [
       "error", { "argsIgnorePattern": "^_" }
     ],
+    "@typescript-eslint/no-non-null-assertion": "off",
     "@typescript-eslint/naming-convention": [
       "error",
       {
