--- a/tsconfig.common.json
+++ b/tsconfig.common.json
@@ -13,7 +13,7 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "forceConsistentCasingInFileNames": true,
-    "downlevelIteration": true,
+    "downlevelIteration": false,
     "stripInternal": true,
     "baseUrl": ".",
     "paths": {
