--- a/examples/scopes/package.json
+++ b/examples/scopes/package.json
@@ -4,23 +4,25 @@
     "start": "node dist/main.js",
     "clean": "npx rimraf ./dist",
     "prebuild": "npm run clean",
-    "build": "npx tsc -p ./tsconfig.json"
+    "build": "npx tsc -p ./tsconfig.json && tscpaths -p tsconfig.json -s ./src -o ./dist"
   },
   "dependencies": {
     "@apoyo/decoders": "^0.0.11",
     "@apoyo/scopes": "^0.0.4",
     "@apoyo/std": "^0.0.11",
+    "axios": "^0.23.0",
     "dotenv-expand": "^5.1.0",
     "dotenv-flow": "^3.2.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/dotenv-flow": "^3.2.0",
     "@types/express": "^4.17.13",
     "@types/node": "^12.6.8",
     "rimraf": "2.6.2",
     "ts-node": "^8.0.2",
-    "typedi": "^0.10.0",
+    "tscpaths": "^0.0.9",
     "typescript": "^4.1.2"
   }
 }
