chore(deps): replace tscpaths by a more maintained package

--- a/examples/scopes/tsconfig.json
+++ b/examples/scopes/tsconfig.json
@@ -17,7 +17,11 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
-    }
+    },
+    "plugins": [
+      { "transform": "typescript-transform-paths" }
+    ]
   },
+  "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
 }
