--- a/examples/scopes/package.json
+++ b/examples/scopes/package.json
@@ -4,11 +4,11 @@
     "start": "node dist/main.js",
     "clean": "npx rimraf ./dist",
     "prebuild": "npm run clean",
-    "build": "npx tsc -p ./tsconfig.json && tscpaths -p tsconfig.json -s ./src -o ./dist"
+    "build": "ttsc -p ./tsconfig.json"
   },
   "dependencies": {
     "@apoyo/decoders": "^0.0.11",
-    "@apoyo/scopes": "^0.0.4",
+    "@apoyo/scopes": "^0.0.5",
     "@apoyo/std": "^0.0.11",
     "axios": "^0.23.0",
     "dotenv-expand": "^5.1.0",
@@ -22,7 +22,8 @@
     "@types/node": "^12.6.8",
     "rimraf": "2.6.2",
     "ts-node": "^8.0.2",
-    "tscpaths": "^0.0.9",
-    "typescript": "^4.1.2"
+    "ttypescript": "^1.5.12",
+    "typescript": "^4.1.2",
+    "typescript-transform-paths": "^3.3.1"
   }
 }
