--- a/package.json
+++ b/package.json
@@ -15,16 +15,12 @@
     "lint:fix": "npx eslint --fix --ext ts,tsx .",
     "test": "npm run lint && lerna run test",
     "build": "lerna run build",
-    "docs:generate": "npx ts-node -r tsconfig-paths/register scripts/generate-docs",
-    "docs:dev": "vuepress dev docs",
-    "docs:build": "npm run build && npm run docs:generate && vuepress build docs",
     "postinstall": "husky install",
     "pub": "lerna publish from-package --contents dist",
     "pub:ci": "lerna publish from-package --contents dist --no-verify-access --yes"
   },
   "dependencies": {},
   "devDependencies": {
-    "@microsoft/tsdoc": "^0.13.0",
     "@types/glob": "^7.1.3",
     "@types/node": "^12.6.8",
     "@types/prettier": "1.10.0",
@@ -39,11 +35,8 @@
     "lerna": "^4.0.0",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
-    "ts-morph": "^10.0.2",
     "ts-node": "^8.0.2",
-    "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.1.2",
-    "vuepress": "^1.8.2"
+    "typescript": "^4.1.2"
   },
   "lint-staged": {
     "*.{js,ts,tsx}": [
