--- a/packages/express/package.json
+++ b/packages/express/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@apoyo/express",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Express utils",
   "main": "lib/index.js",
   "module": "es6/index.js",
@@ -28,13 +28,14 @@
     "build": "npx tsc -p ./tsconfig.common.json && npx tsc -p ./tsconfig.es.json && npx ts-node ../../scripts/build"
   },
   "devDependencies": {
-    "@apoyo/std": "^0.0.12",
     "@apoyo/decoders": "^0.0.12",
-    "@apoyo/scopes": "^0.1.1",
+    "@apoyo/scopes": "^0.1.2",
+    "@apoyo/std": "^0.0.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^26.0.23",
     "@types/node": "^12.6.8",
     "@types/supertest": "^2.0.11",
+    "body-parser": "^1.19.2",
     "express": "^4.17.3",
     "jest": "^26.4.2",
     "rimraf": "2.6.2",
@@ -47,9 +48,9 @@
     "access": "public"
   },
   "peerDependencies": {
-    "@apoyo/std": "^0.0.12",
     "@apoyo/decoders": "^0.0.12",
-    "@apoyo/scopes": "^0.1.1",
+    "@apoyo/scopes": "^0.1.2",
+    "@apoyo/std": "^0.0.12",
     "@types/express": "^4.17.13",
     "express": "^4.17.3"
   },
