--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "husky": "^5.0.9",
     "lerna": "^4.0.0",
     "lint-staged": "^10.5.4",
-    "prettier": "^2.2.1",
+    "prettier": "~2.2.1",
     "ts-node": "^8.0.2",
     "typescript": "^4.1.2"
   },
