--- a/packages/express/package.json
+++ b/packages/express/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@apoyo/express",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "Express utils",
   "main": "lib/index.js",
   "module": "es6/index.js",
@@ -29,7 +29,7 @@
   },
   "devDependencies": {
     "@apoyo/decoders": "^0.0.12",
-    "@apoyo/scopes": "^0.2.0",
+    "@apoyo/scopes": "0.3.0",
     "@apoyo/std": "^0.0.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^26.0.23",
@@ -50,7 +50,7 @@
   "peerDependencies": {
     "@apoyo/std": "^0.0.12",
     "@apoyo/decoders": "^0.0.13",
-    "@apoyo/scopes": "^0.2.0",
+    "@apoyo/scopes": "0.3.0",
     "@types/express": "^4.17.13",
     "express": "^4.17.3"
   },
