--- a/packages/process/package.json
+++ b/packages/process/package.json
@@ -32,9 +32,9 @@
     "build": "npx tsc -p ./tsconfig.common.json && npx tsc -p ./tsconfig.es.json && npx ts-node ../../scripts/build"
   },
   "devDependencies": {
-    "@apoyo/decoders": "^0.0.13",
+    "@apoyo/decoders": "^0.0.15",
     "@apoyo/scopes": "^0.3.0",
-    "@apoyo/std": "^0.0.12",
+    "@apoyo/std": "^0.0.14",
     "@types/jest": "^26.0.23",
     "@types/node": "^12.6.8",
     "jest": "^26.4.2",
@@ -44,9 +44,9 @@
     "typescript": "^4.1.2"
   },
   "peerDependencies": {
-    "@apoyo/decoders": "^0.0.13",
+    "@apoyo/decoders": "^0.0.15",
     "@apoyo/scopes": "^0.3.0",
-    "@apoyo/std": "^0.0.12"
+    "@apoyo/std": "^0.0.14"
   },
   "publishConfig": {
     "access": "public"
@@ -54,6 +54,8 @@
   "dependencies": {
     "@types/dotenv-flow": "^3.2.0",
     "dotenv-expand": "^8.0.3",
-    "dotenv-flow": "^3.2.0"
+    "dotenv-flow": "^3.2.0",
+    "pino": "^8.1.0",
+    "pino-pretty": "^8.1.0"
   }
 }
