fix: pino FinalizationRegistry requires node 14

--- a/packages/process/package.json
+++ b/packages/process/package.json
@@ -8,6 +8,9 @@
   "sideEffects": false,
   "author": "Sascha Braun",
   "license": "MIT",
+  "engines": {
+    "node": ">= 14.0.0"
+  },
   "tags": [
     "utils",
     "process",
