--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+# Yarn
+.yarn/*
+!.yarn/patches
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
+
+
 *.log
 node_modules
 dist
