--- a/package.json
+++ b/package.json
@@ -1,32 +1,29 @@
 {
   "name": "apoyo",
   "version": "1.0.0",
-  "private": "true",
+  "private": true,
   "workspaces": [
     "packages/*"
   ],
+  "packageManager": "yarn@3.2.0",
   "engines": {
-    "node": ">=12.0.0",
-    "yarn": ">=1.22.4 <2",
+    "node": ">=14.0.0",
     "npm": "Please use yarn instead of NPM to install dependencies"
   },
   "scripts": {
-    "lint": "npx eslint --ext ts,tsx .",
-    "lint:fix": "npx eslint --fix --ext ts,tsx .",
-    "test": "npm run lint && lerna run test",
-    "build": "lerna run build",
-    "postinstall": "husky install",
-    "pub": "lerna publish from-package --contents dist",
-    "pub:ci": "lerna publish from-package --contents dist --no-verify-access --yes"
+    "lint": "yarn run eslint --ext ts,tsx .",
+    "lint:fix": "yarn run eslint --fix --ext ts,tsx .",
+    "test": "yarn lint && yarn workspaces foreach --no-private run test",
+    "build": "yarn jill each build --no-private",
+    "postinstall": "husky install"
   },
-  "dependencies": {},
   "devDependencies": {
     "@types/glob": "^7.1.3",
     "@types/node": "^12.6.8",
     "@types/prettier": "1.10.0",
     "@types/underscore": "^1.10.24",
-    "@typescript-eslint/eslint-plugin": "^4.15.0",
-    "@typescript-eslint/parser": "^4.15.0",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
     "eslint": "^7.19.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-prettier": "^3.3.1",
@@ -40,10 +37,13 @@
   },
   "lint-staged": {
     "*.{js,ts,tsx}": [
-      "npx eslint --fix"
+      "yarn run eslint --fix"
     ]
   },
   "resolutions": {
     "@types/superagent": "4.1.14"
+  },
+  "dependencies": {
+    "@jujulego/jill": "^1.2.1"
   }
 }
