--- a/packages/decoders/tsconfig.common.json
+++ b/packages/decoders/tsconfig.common.json
@@ -1,7 +1,9 @@
 {
   "extends": "../../tsconfig.common.json",
   "compilerOptions": {
-    "outDir": "./dist/lib"
+    "outDir": "./dist/lib",
+    "rootDir": "./src",
+    "baseUrl": "."
   },
   "include": ["src"]
 }
