--- a/packages/http/tsconfig.es.json
+++ b/packages/http/tsconfig.es.json
@@ -1,7 +1,9 @@
 {
   "extends": "../../tsconfig.es.json",
   "compilerOptions": {
-    "outDir": "./dist/es6"
+    "outDir": "./dist/es6",
+    "rootDir": "./src",
+    "baseUrl": "."
   },
   "include": ["src"]
 }
