--- a/packages/csv/package.json
+++ b/packages/csv/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@apoyo/csv",
-  "private": "true",
   "version": "0.0.1",
+  "private": true,
   "description": "CSV Parsing utilities",
-  "main": "lib/index.js",
-  "module": "es6/index.js",
-  "typings": "lib/index.d.ts",
+  "main": "dist/lib/index.js",
+  "module": "dist/es6/index.js",
+  "typings": "dist/lib/index.d.ts",
   "sideEffects": false,
   "author": "Sascha Braun",
   "license": "MIT",
@@ -29,18 +29,17 @@
   "scripts": {
     "test": "jest --verbose --runInBand",
     "clean": "npx rimraf ./dist",
-    "prebuild": "npm run clean",
-    "build": "npx tsc -p ./tsconfig.common.json && npx tsc -p ./tsconfig.es.json && npx ts-node ../../scripts/build"
+    "build": "npm run clean && npx tsc -p ./tsconfig.common.json && npx tsc -p ./tsconfig.es.json"
   },
   "dependencies": {
     "@types/papaparse": "^5.2.5",
     "papaparse": "^5.3.0"
   },
   "devDependencies": {
-    "@apoyo/decoders": "^0.0.11",
-    "@apoyo/std": "^0.0.11",
+    "@apoyo/decoders": "^0.0.15",
+    "@apoyo/std": "^0.0.14",
     "@types/jest": "^26.0.23",
-    "@types/node": "^12.6.8",
+    "@types/node": "^14.18.21",
     "jest": "^26.4.2",
     "rimraf": "2.6.2",
     "ts-jest": "^26.3.0",
