--- a/packages/csv/package.json
+++ b/packages/csv/package.json
@@ -3,9 +3,15 @@
   "version": "0.0.1",
   "private": true,
   "description": "CSV Parsing utilities",
-  "main": "dist/lib/index.js",
-  "module": "dist/es6/index.js",
-  "typings": "dist/lib/index.d.ts",
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "typings": "dist/index.d.ts",
+  "files": [
+    "dist",
+    "LICENSE",
+    "README.md",
+    "package.json"
+  ],
   "sideEffects": false,
   "author": "Sascha Braun",
   "license": "MIT",
@@ -28,26 +34,25 @@
   "homepage": "https://github.com/neoxia/apoyo/tree/master/packages/csv",
   "scripts": {
     "test": "jest --verbose --runInBand",
-    "clean": "npx rimraf ./dist",
-    "build": "npm run clean && npx tsc -p ./tsconfig.common.json && npx tsc -p ./tsconfig.es.json"
+    "build": "tsup"
   },
   "dependencies": {
     "@types/papaparse": "^5.2.5",
     "papaparse": "^5.3.0"
   },
   "devDependencies": {
-    "@apoyo/decoders": "^0.0.15",
-    "@apoyo/std": "^0.0.14",
+    "@apoyo/decoders": "^0.0.16",
+    "@apoyo/std": "^0.0.15",
     "@types/jest": "^26.0.23",
     "@types/node": "^14.18.21",
     "jest": "^26.4.2",
-    "rimraf": "2.6.2",
     "ts-jest": "^26.3.0",
     "ts-node": "^8.0.2",
-    "typescript": "^4.1.2"
+    "tsup": "^6.1.2",
+    "typescript": "^4.7.4"
   },
   "peerDependencies": {
-    "@apoyo/decoders": "^0.0.8",
-    "@apoyo/std": "^0.0.8"
+    "@apoyo/decoders": "^0.0.16",
+    "@apoyo/std": "^0.0.15"
   }
 }
