--- a/packages/process/package.json
+++ b/packages/process/package.json
@@ -1,10 +1,16 @@
 {
   "name": "@apoyo/process",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Utils focused around the current process",
-  "main": "dist/lib/index.js",
-  "module": "dist/es6/index.js",
-  "typings": "dist/lib/index.d.ts",
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "typings": "dist/index.d.ts",
+  "files": [
+    "dist",
+    "LICENSE",
+    "README.md",
+    "package.json"
+  ],
   "sideEffects": false,
   "author": "Sascha Braun",
   "license": "MIT",
@@ -30,25 +36,24 @@
   "homepage": "https://github.com/neoxia/apoyo/tree/master/packages/process",
   "scripts": {
     "test": "jest --verbose --runInBand",
-    "clean": "npx rimraf ./dist",
-    "build": "npm run clean && npx tsc -p ./tsconfig.common.json && npx tsc -p ./tsconfig.es.json"
+    "build": "tsup"
   },
   "devDependencies": {
-    "@apoyo/decoders": "^0.0.15",
-    "@apoyo/scopes": "^0.3.0",
-    "@apoyo/std": "^0.0.14",
+    "@apoyo/decoders": "^0.0.16",
+    "@apoyo/scopes": "^0.3.1",
+    "@apoyo/std": "^0.0.15",
     "@types/jest": "^26.0.23",
     "@types/node": "^14.18.21",
     "jest": "^26.4.2",
-    "rimraf": "2.6.2",
     "ts-jest": "^26.3.0",
     "ts-node": "^8.0.2",
-    "typescript": "^4.1.2"
+    "tsup": "^6.1.2",
+    "typescript": "^4.7.4"
   },
   "peerDependencies": {
-    "@apoyo/decoders": "^0.0.15",
-    "@apoyo/scopes": "^0.3.0",
-    "@apoyo/std": "^0.0.14"
+    "@apoyo/decoders": "^0.0.16",
+    "@apoyo/scopes": "^0.3.1",
+    "@apoyo/std": "^0.0.15"
   },
   "publishConfig": {
     "access": "public"
