--- a/packages/std/package.json
+++ b/packages/std/package.json
@@ -1,10 +1,16 @@
 {
   "name": "@apoyo/std",
-  "version": "0.0.14",
+  "version": "0.0.15",
   "description": "Typescript utility library",
-  "main": "dist/lib/index.js",
-  "module": "dist/es6/index.js",
-  "typings": "dist/lib/index.d.ts",
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "typings": "dist/index.d.ts",
+  "files": [
+    "dist",
+    "LICENSE",
+    "README.md",
+    "package.json"
+  ],
   "sideEffects": false,
   "author": "Sascha Braun",
   "license": "MIT",
@@ -29,18 +35,16 @@
   "homepage": "https://github.com/neoxia/apoyo/tree/master/packages/std",
   "scripts": {
     "test": "jest --verbose --runInBand",
-    "clean": "npx rimraf ./dist",
-    "prebuild": "npm run clean",
-    "build": "npx tsc -p ./tsconfig.common.json && npx tsc -p ./tsconfig.es.json"
+    "build": "tsup"
   },
   "devDependencies": {
     "@types/jest": "^26.0.23",
     "@types/node": "^14.18.21",
     "jest": "^26.4.2",
-    "rimraf": "2.6.2",
     "ts-jest": "^26.3.0",
     "ts-node": "^8.0.2",
-    "typescript": "^4.1.2"
+    "tsup": "^6.1.2",
+    "typescript": "^4.7.4"
   },
   "publishConfig": {
     "access": "public"
