--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,3 +30,9 @@ jobs:
         run: yarn workspaces foreach --no-private npm publish --tolerate-republish
         env:
           YARN_NPM_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+    services:
+      fake_s3:
+        image: lphoward/fake-s3
+        ports:
+          - 4569:4569
