feat(files): fix s3 unit tests in github actions

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,6 +25,8 @@ jobs:
       - run: yarn build
 
       - run: yarn test
+        env:
+          AWS_S3_SERVER: http://fake_s3:4569
 
       - name: Publish
         run: yarn workspaces foreach --no-private npm publish --tolerate-republish
