feat(files): fix s3 unit tests in github actions

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,6 +11,12 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    services:
+      fake_s3:
+        image: lphoward/fake-s3
+        ports:
+          - 4569:4569
+
     steps:
       - uses: actions/checkout@v3.0.2
 
@@ -26,15 +32,9 @@ jobs:
 
       - run: yarn test
         env:
-          AWS_S3_SERVER: http://fake_s3:4569
+          AWS_S3_SERVER: http://localhost:4569
 
       - name: Publish
         run: yarn workspaces foreach --no-private npm publish --tolerate-republish
         env:
           YARN_NPM_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-
-    services:
-      fake_s3:
-        image: lphoward/fake-s3
-        ports:
-          - 4569:4569
