--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -16,6 +16,12 @@ jobs:
       matrix:
         node-version: [14.x]
 
+    services:
+      fake_s3:
+        image: lphoward/fake-s3
+        ports:
+          - 4569:4569
+
     steps:
       - uses: actions/checkout@v3.0.2
 
@@ -31,10 +37,4 @@ jobs:
 
       - run: yarn test
         env:
-          AWS_S3_SERVER: http://fake_s3:4569
-
-    services:
-      fake_s3:
-        image: lphoward/fake-s3
-        ports:
-          - 4569:4569
+          AWS_S3_SERVER: http://localhost:4569
