--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,6 +11,12 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    services:
+      fake_s3:
+        image: lphoward/fake-s3
+        ports:
+          - 4569:4569
+
     steps:
       - uses: actions/checkout@v3.0.2
 
@@ -25,6 +31,8 @@ jobs:
       - run: yarn build
 
       - run: yarn test
+        env:
+          AWS_S3_SERVER: http://localhost:4569
 
       - name: Publish
         run: yarn workspaces foreach --no-private npm publish --tolerate-republish
