--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -21,6 +21,10 @@ jobs:
         image: lphoward/fake-s3
         ports:
           - 4569:4569
+      fake_azure:
+        image: mcr.microsoft.com/azure-storage/azurite
+        ports:
+          - 10000:10000
 
     steps:
       - uses: actions/checkout@v3.0.2
