--- a/packages/files-azure/package.json
+++ b/packages/files-azure/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@apoyo/files-azure",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "File driver for Azure Storage",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "@apoyo/files": "~0.0.2",
+    "@apoyo/std": "0.0.15",
     "@types/jest": "^26.0.23",
     "@types/node": "^14.18.21",
     "jest": "^26.4.2",
@@ -49,7 +50,8 @@
     "typescript": "^4.7.4"
   },
   "peerDependencies": {
-    "@apoyo/files": "~0.0.2"
+    "@apoyo/files": "~0.0.2",
+    "@apoyo/std": "0.0.15"
   },
   "publishConfig": {
     "access": "public"
